220 add several fragments

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -11,9 +11,9 @@
 	--sl-color-gray-2: #6b5544;
 	--sl-color-gray-3: #8c7661;
 	--sl-color-gray-4: #b8a08a;
-	--sl-color-gray-5: #d9c8b6;
-	--sl-color-gray-6: #f2e8de;
-	--sl-color-black: #faf5ef;
+	--sl-color-gray-5: #d4bda8;
+	--sl-color-gray-6: #e8d8c6;
+	--sl-color-black: #f0e2d0;
 }
 
 /* 深色模式 (Dark Mode) */
